[tool.poetry]
name = "malib"
version = "0.11.4"
description = ""
authors = ["Louis Abraham <louis.abraham@yahoo.fr>"]
readme = "README.md"
repository = "https://github.com/louisabraham/malib"

[tool.poetry.dependencies]
python = "^3.8"
nest-asyncio = "^1.6.0"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
